notebooks com docker

--- a/notebooks/rumos_bank_lending_prediction - MLflow Random Forest docker.ipynb
+++ b/notebooks/rumos_bank_lending_prediction - MLflow Random Forest docker.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "metadata": {
     "id": "Z4MjCm3SoTXV"
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +150,16 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "uri = \"../mlruns\"\n",
+    "uri = \"http://127.0.0.1:5000\"\n",
     "\n",
-    "Path(uri).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "\n",
     "mlflow.set_tracking_uri(uri)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "<Experiment: artifact_location='file:///c:/Users/ricardo.antunes/Documents/Trabalho/notebooks/../mlruns/151553337456859218', creation_time=1744323504146, experiment_id='151553337456859218', last_update_time=1744323504146, lifecycle_stage='active', name='Rumos Bank Prediction Experiment', tags={}>"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "metadata": {
     "id": "X9ipTbvyoTXX"
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "metadata": {
     "id": "bS6_8IecoTXx"
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 8,
    "metadata": {
     "id": "cjfA10IboTX0"
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 9,
    "metadata": {
     "id": "-6k8pIbEoTX2"
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "metadata": {
     "id": "iTFYPGnloTX4"
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 11,
    "metadata": {
     "id": "AKL-L-7moTX7"
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -373,7 +373,7 @@
        "0.21883333333333332"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -467,7 +467,7 @@
        "0.7811666666666667"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 18,
    "metadata": {
     "id": "rM-AwWw_oTYQ"
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 19,
    "metadata": {
     "id": "TqKsBVjNoTYS"
    },
@@ -538,16 +538,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d3e266e58c0d41d4a382d665e6c5386b'"
+       "'62faa7424145423da3d50d3c4452e1a3'"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "42"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,35 +613,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 24,
    "metadata": {
     "id": "ymFXEgshoTZY",
     "outputId": "c7298f96-1db1-43ca-80e1-55847007e767"
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered model 'Random_Forest' already exists. Creating a new version of this model...\n",
+      "2025/04/16 10:13:48 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: Random_Forest, version 11\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 5min 40s\n",
-      "Wall time: 5min 53s\n"
+      "CPU times: total: 5min 22s\n",
+      "Wall time: 5min 37s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Registered model 'Random_Forest' already exists. Creating a new version of this model...\n",
-      "Created version '9' of model 'Random_Forest'.\n"
+      "Created version '11' of model 'Random_Forest'.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mlflow.models.model.ModelInfo at 0x2c236750160>"
+       "<mlflow.models.model.ModelInfo at 0x288242e1810>"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 26,
    "metadata": {
     "id": "ic2hsu3foTZZ",
     "outputId": "2f3fb76d-c6a6-4859-d5d6-649ed6843324"
@@ -684,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 27,
    "metadata": {
     "id": "-pbnDC_qoTZe",
     "outputId": "0fdf1f8d-1b98-4e30-ce5a-5d2c5d11cc2a"
@@ -707,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 28,
    "metadata": {
     "id": "vlXoIu4AoTZg",
     "outputId": "62de4258-129d-4214-ce35-ceda7fd071fc"
@@ -719,7 +726,7 @@
        "np.int64(2469000)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,16 +746,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run Random Forest Run at: http://127.0.0.1:5000/#/experiments/151553337456859218/runs/62faa7424145423da3d50d3c4452e1a3\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/151553337456859218\n"
+     ]
+    }
+   ],
    "source": [
     "mlflow.end_run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -784,11 +800,11 @@
        " 'return_train_score': 'False',\n",
        " 'scoring': 'None',\n",
        " 'seed': '42',\n",
-       " 'verbose': '0'}, tags={'mlflow.log-model.history': '[{\"run_id\": \"d3e266e58c0d41d4a382d665e6c5386b\", '\n",
+       " 'verbose': '0'}, tags={'mlflow.log-model.history': '[{\"run_id\": \"62faa7424145423da3d50d3c4452e1a3\", '\n",
        "                             '\"artifact_path\": \"Random_Forest\", '\n",
-       "                             '\"utc_time_created\": \"2025-04-11 '\n",
-       "                             '14:24:35.144855\", \"model_uuid\": '\n",
-       "                             '\"bfadf234cae949ffaa3db236fb2ca7df\", \"flavors\": '\n",
+       "                             '\"utc_time_created\": \"2025-04-16 '\n",
+       "                             '09:13:41.219833\", \"model_uuid\": '\n",
+       "                             '\"b1ab8bd00684430e96efeaff67f9628e\", \"flavors\": '\n",
        "                             '{\"python_function\": {\"model_path\": \"model.pkl\", '\n",
        "                             '\"predict_fn\": \"predict\", \"loader_module\": '\n",
        "                             '\"mlflow.sklearn\", \"python_version\": \"3.10.16\", '\n",
@@ -804,7 +820,7 @@
        " 'mlflow.user': 'ricardo.antunes'}>"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 31,
    "metadata": {
     "id": "GNUyR7O2oTZz"
    },
@@ -856,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 32,
    "metadata": {
     "id": "wkHKRuXSoTZ2",
     "outputId": "7e37bc69-716f-438c-fdaf-b75fd8890f07"
@@ -889,95 +905,95 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>PAY_0</th>\n",
-       "      <td>0.097961</td>\n",
+       "      <td>0.098320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AGE</th>\n",
-       "      <td>0.066602</td>\n",
+       "      <td>0.066196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BILL_AMT1</th>\n",
-       "      <td>0.059924</td>\n",
+       "      <td>0.060141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LIMIT_BAL</th>\n",
-       "      <td>0.059835</td>\n",
+       "      <td>0.059135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BILL_AMT2</th>\n",
-       "      <td>0.054378</td>\n",
+       "      <td>0.054082</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BILL_AMT3</th>\n",
-       "      <td>0.051659</td>\n",
+       "      <td>0.051518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_AMT1</th>\n",
-       "      <td>0.051287</td>\n",
+       "      <td>0.051203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BILL_AMT6</th>\n",
-       "      <td>0.050236</td>\n",
+       "      <td>0.050533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BILL_AMT4</th>\n",
-       "      <td>0.050232</td>\n",
+       "      <td>0.050373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BILL_AMT5</th>\n",
-       "      <td>0.049745</td>\n",
+       "      <td>0.049965</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_AMT2</th>\n",
-       "      <td>0.047170</td>\n",
+       "      <td>0.047055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_AMT3</th>\n",
-       "      <td>0.046308</td>\n",
+       "      <td>0.046497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_AMT6</th>\n",
-       "      <td>0.045708</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PAY_AMT4</th>\n",
-       "      <td>0.043621</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PAY_AMT5</th>\n",
-       "      <td>0.043433</td>\n",
+       "      <td>0.045575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_2</th>\n",
-       "      <td>0.042622</td>\n",
+       "      <td>0.044001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <td>0.043500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <td>0.043227</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_3</th>\n",
-       "      <td>0.029050</td>\n",
+       "      <td>0.028593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_4</th>\n",
-       "      <td>0.024488</td>\n",
+       "      <td>0.024455</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EDUCATION</th>\n",
-       "      <td>0.020868</td>\n",
+       "      <td>0.020804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_5</th>\n",
-       "      <td>0.019713</td>\n",
+       "      <td>0.019709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PAY_6</th>\n",
-       "      <td>0.019137</td>\n",
+       "      <td>0.018982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MARRIAGE</th>\n",
-       "      <td>0.014034</td>\n",
+       "      <td>0.014049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SEX</th>\n",
-       "      <td>0.011991</td>\n",
+       "      <td>0.012089</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -985,32 +1001,32 @@
       ],
       "text/plain": [
        "              value\n",
-       "PAY_0      0.097961\n",
-       "AGE        0.066602\n",
-       "BILL_AMT1  0.059924\n",
-       "LIMIT_BAL  0.059835\n",
-       "BILL_AMT2  0.054378\n",
-       "BILL_AMT3  0.051659\n",
-       "PAY_AMT1   0.051287\n",
-       "BILL_AMT6  0.050236\n",
-       "BILL_AMT4  0.050232\n",
-       "BILL_AMT5  0.049745\n",
-       "PAY_AMT2   0.047170\n",
-       "PAY_AMT3   0.046308\n",
-       "PAY_AMT6   0.045708\n",
-       "PAY_AMT4   0.043621\n",
-       "PAY_AMT5   0.043433\n",
-       "PAY_2      0.042622\n",
-       "PAY_3      0.029050\n",
-       "PAY_4      0.024488\n",
-       "EDUCATION  0.020868\n",
-       "PAY_5      0.019713\n",
-       "PAY_6      0.019137\n",
-       "MARRIAGE   0.014034\n",
-       "SEX        0.011991"
+       "PAY_0      0.098320\n",
+       "AGE        0.066196\n",
+       "BILL_AMT1  0.060141\n",
+       "LIMIT_BAL  0.059135\n",
+       "BILL_AMT2  0.054082\n",
+       "BILL_AMT3  0.051518\n",
+       "PAY_AMT1   0.051203\n",
+       "BILL_AMT6  0.050533\n",
+       "BILL_AMT4  0.050373\n",
+       "BILL_AMT5  0.049965\n",
+       "PAY_AMT2   0.047055\n",
+       "PAY_AMT3   0.046497\n",
+       "PAY_AMT6   0.045575\n",
+       "PAY_2      0.044001\n",
+       "PAY_AMT5   0.043500\n",
+       "PAY_AMT4   0.043227\n",
+       "PAY_3      0.028593\n",
+       "PAY_4      0.024455\n",
+       "EDUCATION  0.020804\n",
+       "PAY_5      0.019709\n",
+       "PAY_6      0.018982\n",
+       "MARRIAGE   0.014049\n",
+       "SEX        0.012089"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
