--- a/notebooks/rumos_bank_lending-prediction-RandomForest_read_model docker.ipynb
+++ b/notebooks/rumos_bank_lending-prediction-RandomForest_read_model docker.ipynb
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1446,11 +1446,11 @@
    ],
    "source": [
     "# Teste com assert para verificar se a soma dos y_preds faz sentido em relação à accuracy\n",
-    "assert soma_y_preds <= len(y_preds), \"Erro: Soma dos y_preds maior que número de previsões\"\n",
+    "assert soma_y_preds <= len(y_preds), \"Erro: Soma dos y_preds maior que o número de previsões\"\n",
     "assert nsamples*accuracy-5*nsamples/10 <= soma_y_preds <= nsamples*accuracy+5*nsamples/10, \"Erro: Accuracy fora do intervalo esperado\"\n",
     "\n",
     "\n",
-    "print(\"Testes concluídos com sucesso! 🚀\")"
+    "print(\"Testes concluídos com sucesso!\")"
    ]
   }
  ],
